--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 /*
 * Contexts
 */
+
 .context-dark, .bg-gray-900, .bg-accent,
 .context-dark h1,
 .bg-gray-900 h1,
@@ -48,6 +49,7 @@ label {
 p {
 	margin: 0;
 }
+
 
 ul,
 ol {
@@ -99,6 +101,10 @@ address {
 figure {
 	margin-bottom: 0;
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 html p a:hover {
 	text-decoration: none;
@@ -132,7 +138,11 @@ h1, h2, h3, h4, h5, h6, .heading {
 	margin-bottom: 0;
 	font-family: Muli, sans-serif;
 	font-weight: 300;
+	font-size: 40px;
 	color: #262f3c;
+}
+#footer-title{
+	color: white;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .heading a {
@@ -456,6 +466,7 @@ mark,
 	font-size: 15px;
 	line-height: 1.4;
 	font-weight: 400;
+	text-align: justify;
 }
 
 @media (min-width: 992px) {
@@ -518,8 +529,14 @@ p [style*='max-width'] {
 /*
 * Brand
 */
+.footer-color{
+	font-size: 30px;
+	color: white;
+}
 .brand {
 	display: inline-block;
+	color: white;
+	font-size: 40px;
 }
 
 .brand .brand-logo-light {
@@ -5156,7 +5173,7 @@ html .quote-minimal-cite {
 	left: 0;
 	opacity: .4;
 	pointer-events: none;
-	background-image: linear-gradient(to top, #07264c 0%, #07264c 100%);
+	
 }
 
 .thumbnail-classy-caption {
@@ -5585,7 +5602,8 @@ section.breadcrumbs-custom + section {
 * Footers
 */
 .footer-classic {
-	border-top: 1px solid #ebebeb;
+	border-top: 1px solid #000000;
+	background-color: #000000;
 }
 
 .footer-classic.footer-classic_boxed,
@@ -5613,7 +5631,7 @@ section.breadcrumbs-custom + section {
 .footer-classic-aside {
 	padding: 20px 0;
 	text-align: center;
-	border-top: 1px solid #ebebeb;
+	border-top: 1px solid #2f2f2f;
 }
 
 .footer-classic-aside .rights {
@@ -6115,7 +6133,7 @@ html:not(.tablet):not(.mobile) .profile-modern-toggle {
 	}
 	.layout-4-item-left {
 		width: 67%;
-		margin-left: -12.5%;
+	
 		max-width: 100%;
 	}
 	.layout-4-item-right {
@@ -8395,6 +8413,7 @@ a.text-accent:hover {
 }
 
 .text-gray-900 {
+	font-size: 20px;
 	color: #262f3c;
 }
 
@@ -8937,6 +8956,7 @@ html .page * + .ot50 {
 .section-md,
 .section-lg,
 .section-xl {
+
 	padding: 50px 0;
 }
 
@@ -10940,7 +10960,7 @@ html:not(.lt-ie10) .not-animated {
 	align-items: center;
 	padding: 20px;
 	background: #ffffff;
-	transition: .1s;
+	transition: .2s;
 }
 
 .preloader.loaded {
@@ -10995,7 +11015,7 @@ html:not(.lt-ie10) .not-animated {
 	left: 55px;
 	width: 90px;
 	height: 90px;
-	animation-delay: 0.4s;
+	animation-delay: 0.25s;
 }
 
 #object_four {
@@ -11003,7 +11023,7 @@ html:not(.lt-ie10) .not-animated {
 	left: 45px;
 	width: 110px;
 	height: 110px;
-	animation-delay: 0.6s;
+	animation-delay: 0.3s;
 }
 
 @keyframes animate {
@@ -11706,7 +11726,7 @@ html.tablet .ui-to-top {
 	overflow-y: auto;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
-	font-size: 14px;
+	font-size: 20px;
 	line-height: 34px;
 	transform-origin: 0 50%;
 	transform: translate3d(-10px, 0, 0);
